# nrf9160-Lab5e

./: README.md
samples/coap/: CMakeLists.txt  README.md  prj.conf
samples/coap/src/: coap.c  coap.h  main.c
samples/fota/: CMakeLists.txt  README.md  prj.conf
samples/fota/src/: fota.c  fota.h  main.c
samples/hello_world/: CMakeLists.txt  README.md  prj.conf
samples/hello_world/src/: main.c
